--- a/JS/CountDown Timer/css/style.css
+++ b/JS/CountDown Timer/css/style.css
@@ -14,10 +14,10 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background: url("/JS/images/img1.jpg");
+    background: url("/JS/CountDown Timer/images/img1.jpg");
     color: white;
     /* background-size: cover; */
-    backgroundp;
+    
  
 
 
